@@ -225,6 +225,31 @@ are Spin comments that start with {++ and end with }. The text between
 annotations is passed through to the C++ compiler. This provides a way
 to give extra semantic information beyond that available in Spin.
 
+Variable Annotations
+--------------------
+Annotations may appear after variable declarations to associate additional
+type specifiers with those variables; for example:
+
+VAR
+  long {++volatile} x
+
+makes "x" a volatile variable in C.
+
+The generated DAT block may similarly have type specifiers associated
+with it by placing those after the DAT statement:
+
+DAT {++volatile}
+
+declares the whole DAT section to be volatile.
+
+Code Annotations
+----------------
+Whole blocks of C/C++ code may be embedded between {++ and }. Make
+sure the '{' and '}' characters are balanced in such code! This
+feature is useful for adding additional methods that appear only in C,
+or for overriding Spin versions of methods.
+
+
 Directives
 ----------
 Annotations which begin with the character '!' are special
@@ -232,6 +257,7 @@ directives for spin2cpp. The following special directives are
 recognized:
    {++!nospin}: do not output any Spin methods
    {++!ccode}:  output C rather than C++ code
+
 
 DEVELOPER NOTES
 ===============
