@@ -1,0 +1,13 @@
+#ifndef test106_Class_Defined__
+#define test106_Class_Defined__
+
+#include <stdint.h>
+
+class test106 {
+public:
+  static uint8_t volatile dat[];
+  int32_t	Foo(void);
+private:
+};
+
+#endif
