@@ -1,0 +1,5 @@
+DAT {++volatile}
+x	long 0
+
+PUB foo
+  return x+1
